:zap: order receiver_product_type recode
